--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
-    "ignore": ["src/config.ts"],
+    "ignore": [],
     "indentStyle": "space",
     "indentWidth": 2,
     "lineWidth": 80
